--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,12 +10,15 @@
     <ListView
         android:id="@+id/houseItems"
         android:layout_width="match_parent"
-        android:layout_height="460dp" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/addHouseItem"/>
 
     <Button
         android:id="@+id/addHouseItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_item" />
+        android:text="@string/add_item"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"/>
 
-</LinearLayout>
+</RelativeLayout>
