--- a/app/src/main/res/values/strings_room.xml
+++ b/app/src/main/res/values/strings_room.xml
@@ -18,7 +18,6 @@
     <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
     <string name="materialcolorpicker__inputColor">Color: </string>
     <string name="materialcolorpicker__btnSelectColor">Select</string>
-    <string name="materialcolorpicker__hash" translatable="false">#</string>
 
     <!-- TV -->
     <string name="turn_tv_on">TURN TV ON</string>
@@ -50,6 +49,8 @@
     <string name="room_add_device">Add Device</string>
     <string name="room_item_added">Item was added successfully</string>
     <string name="room_item_deleted">Item was deleted successfully</string>
+
+    <string name="aboutRoom">By Saleh Yassin\nVersion 1.0</string>
 
     <string-array name="rooms_array">
         <item>TV</item>
